<resources>
    <string name="app_name">Charon</string>
    <string name="action_settings">Settings</string>
    <string name="action_next">Next</string>
    <string name="action_prev">Prev</string>
    <string name="action_today">Today</string>
    <string name="action_resources">Resources</string>
    <string name="action_assignments">Assignments</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>

    <string name="action_cnas"><![CDATA[Computer Network & Security]]></string>
    <string name="action_dsap"><![CDATA[Digital Signal Analysis & Processing]]></string>
    <string name="action_ds">Distributed System</string>
    <string name="action_pm">Project Management</string>
    <string name="action_oam"><![CDATA[Organization & Management]]></string>
    <string name="action_eeas"><![CDATA[Energy Environment & Society]]></string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calendar">Academic Calendar</string>
    <string name="api_text">API Source IP/Domain</string>
    <string name="api_warning"> Do not change unless instructed to.</string>
    <string name="api_apply">Apply</string>
    <string name="api_example">eg: 192.168.2.33</string>
    <string name="kartik">Kartik</string>
    <string name="mangsir">Mangsir</string>
    <string name="poush">Poush</string>
    <string name="magh">Magh</string>
    <string name="chaitra">Chaitra</string>
    <string name="falgun">Falgun</string>
    <string name="revert_month">Revert Month</string>
    <string name="academic_calender">Academic Calender</string>
    <string name="syllabus">Syllabus</string>
    <string name="elective">Elective</string>
    <string name="title_activity_notice_board">NoticeBoardActivity</string>
</resources>
